--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lionel Luwanu — CV</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main class="container">
@@ -117,4 +117,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
